# ELSDc_small

./: README.md
src/: CMakeLists.txt  curve_grow.c  curve_grow.h  ellipse_fit.c  ellipse_fit.h  elsdc.c  elsdc.h  gauss.c  gauss.h  image.c  image.h  iterator.c  iterator.h  lapack_wrapper.c  lapack_wrapper.h  main.c  misc.c  misc.h  pgm.c  pgm.h  polygon.c  polygon.h  rectangle.c  rectangle.h  ring.c  ring.h  svg.h
